# PiscDjango

./: .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.prod.sh  main.py  pyproject.toml  requirements.txt
consultas/: admin.py  agents.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py  wrapper_evolutionapi.py  wrapper_evolutionapi_old.py
consultas/migrations/: 0001_initial.py  0002_datatreinamento_pergunta.py  0003_alter_pergunta_data_treinamento.py  0004_alter_pergunta_data_treinamento.py
consultas/templates/: chat.html  consultas.html  gravacao.html
consultas/templatetags/: consultas_filters.py
core/: settings.py  urls.py
prompts/: prompts.py
usuarios/: admin.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_pacientes_telefone.py
usuarios/templates/: cadastro.html  login.html  pacientes.html
