[project]
name = "psique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-q2>=1.10.0",
    "faiss-cpu>=1.13.2",
    "gunicorn>=26.0.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.36.0",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
    "whitenoise>=6.12.0",
]
